--- a/TestCases/multiple_ffd/naca0012/inv_NACA0012_ffd.cfg
+++ b/TestCases/multiple_ffd/naca0012/inv_NACA0012_ffd.cfg
@@ -28,7 +28,7 @@ WRT_BINARY_RESTART= NO
 % Read binary restart files (YES, NO)
 READ_BINARY_RESTART= NO
 
-
+OUTPUT_FILES=(RESTART_ASCII)
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
 %
 % Mach number (non-dimensional, based on the free-stream values)
@@ -293,7 +293,7 @@ SOLUTION_FILENAME= solution_flow.dat
 SOLUTION_ADJ_FILENAME= solution_adj.dat
 %
 % Output tabular format (CSV, TECPLOT)
-TABULAR_FORMAT= CSV 
+TABULAR_FORMAT= TECPLOT 
 %
 % Output file convergence history (w/o extension) 
 CONV_FILENAME= history
