--- a/TestCases/disc_adj_euler/naca0012_pitching/inv_NACA0012_pitching.cfg
+++ b/TestCases/disc_adj_euler/naca0012_pitching/inv_NACA0012_pitching.cfg
@@ -11,7 +11,11 @@ MATH_PROBLEM= DISCRETE_ADJOINT
 % Restart solution (NO, YES)
 RESTART_SOL= NO
 SINGLEZONE_DRIVER= YES
+TIME_ITER= 151
+ITER= 350
 
+%EXT_ITER= 151
+%UNST_INT_ITER= 110
 % ------------------------- UNSTEADY SIMULATION -------------------------------%
 %
 % Unsteady simulation (NO, TIME_STEPPING, DUAL_TIME_STEPPING-1ST_ORDER,
@@ -25,20 +29,15 @@ UNST_TIMESTEP= 0.0023555025613149587
 % 25 steps per period: 0.0023555025613149587
 %
 % Total Physical Time for dual time stepping simulations (s)
-UNST_TIME= 0.354% 150 steps
-%
-% Number of internal iterations (dual time method)
-ITER= 110
+% 150 steps
+UNST_TIME= 0.354
 %
 % Iteration number to begin unsteady restarts
 UNST_RESTART_ITER= 151
 %
 % Starting direct iteration for unsteady adjoint
 UNST_ADJOINT_ITER= 151
-%TIME_ITER= 151
-% Time_Iter for the SU2_CFD_AD run of the regression tests.
-TIME_ITER= 5
-%
+
 % ----------------------- DYNAMIC MESH DEFINITION -----------------------------%
 %
 % Dynamic mesh simulation (NO, YES)
@@ -231,7 +230,7 @@ FFD_CONTINUITY= 2ND_DERIVATIVE
 %                      NACA_4DIGITS, DISPLACEMENT, ROTATION, FFD_CONTROL_POINT,
 %                      FFD_DIHEDRAL_ANGLE, FFD_TWIST_ANGLE, FFD_ROTATION,
 %                      FFD_CAMBER, FFD_THICKNESS, FFD_CONTROL_SURFACE, SURFACE_FILE, AIRFOIL)
-DV_KIND= FFD_CONTROL_POINT
+DV_KIND= FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT
 %DV_KIND= FFD_SETTING
 %
 % Marker of the surface in which we are going apply the shape deformation
@@ -245,10 +244,11 @@ DV_MARKER= ( airfoil )
 %       - FFD_CAMBER ( FFD_BoxTag, i_Ind, j_Ind )
 %       - FFD_THICKNESS ( FFD_BoxTag, i_Ind, j_Ind )
 %       - FFD_VOLUME ( FFD_BoxTag, i_Ind, j_Ind )
-DV_PARAM= ( airfoil_box, 5, 0, 0, 0.0, 1.0, 0.0 )
+%DV_PARAM= ( airfoil_box, 5, 0, 0, 0.0, 1.0, 0.0 )
+DV_PARAM= ( airfoil_box, 0, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 1, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 2, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 3, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 4, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 5, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 6, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 7, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 8, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 9, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 10, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 0, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 1, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 2, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 3, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 4, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 5, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 6, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 7, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 8, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 9, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 10, 1, 0, 0.0, 1.0, 0.0 )
 %
 % New value of the shape deformation
-DV_VALUE= 0.05
+DV_VALUE= 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05
 
 % ------------------------ GRID DEFORMATION PARAMETERS ------------------------%
 %
@@ -262,7 +262,7 @@ DEFORM_NONLINEAR_ITER= 1
 DEFORM_CONSOLE_OUTPUT= YES
 %
 % Factor to multiply smallest cell volume for deform tolerance (0.001 default)
-DEFORM_LINEAR_SOLVER_ERROR = 0.001
+DEFORM_LINEAR_SOLVER_ERROR = 0.000000001
 %
 % Type of element stiffness imposed for FEA mesh deformation (INVERSE_VOLUME, 
 %                                          WALL_DISTANCE, CONSTANT_STIFFNESS)
@@ -274,10 +274,10 @@ DEFORM_STIFFNESS_TYPE= INVERSE_VOLUME
 CONV_CRITERIA= RESIDUAL
 %
 % Residual reduction (order of magnitude with respect to the initial value)
-RESIDUAL_REDUCTION= 6
+RESIDUAL_REDUCTION= 16
 %
 % Min value of the residual (log10 of the residual)
-RESIDUAL_MINVAL= -13
+RESIDUAL_MINVAL= -20
 %
 % Start Cauchy criteria at iteration number
 STARTCONV_ITER= 10
@@ -357,4 +357,3 @@ WRT_HALO= NO
 % FFD_CONTROL_POINT (Y)
 DEFINITION_DV= ( 11, 1.0 | airfoil | airfoil_box, 0, 0, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 1, 0, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 2, 0, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 3, 0, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 4, 0, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 5, 0, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 6, 0, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 7, 0, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 8, 0, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 9, 0, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 10, 0, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 0, 1, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 1, 1, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 2, 1, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 3, 1, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 4, 1, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 5, 1, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 6, 1, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 7, 1, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 8, 1, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 9, 1, 0, 0.0, 1.0, 0.0 ); ( 11, 1.0 | airfoil | airfoil_box, 10, 1, 0, 0.0, 1.0, 0.0 )
 
- 
