changed .gitignore to ignore external/ directory

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ externals/autotools/include
 externals/autotools/share
 externals/autotools/lib
 externals/tecio/boost
+externals
 
 #logs and errors
 *.log
