--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,8 @@ externals/autotools/include
 externals/autotools/share
 externals/autotools/lib
 externals/tecio/boost
+.vscode
+ninja
 
 #logs and errors
 *.log
