--- a/TestCases/disc_adj_euler/naca0012_pitching/inv_NACA0012_pitching.cfg
+++ b/TestCases/disc_adj_euler/naca0012_pitching/inv_NACA0012_pitching.cfg
@@ -230,8 +230,8 @@ FFD_CONTINUITY= 2ND_DERIVATIVE
 %                      NACA_4DIGITS, DISPLACEMENT, ROTATION, FFD_CONTROL_POINT,
 %                      FFD_DIHEDRAL_ANGLE, FFD_TWIST_ANGLE, FFD_ROTATION,
 %                      FFD_CAMBER, FFD_THICKNESS, FFD_CONTROL_SURFACE, SURFACE_FILE, AIRFOIL)
-DV_KIND= FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT
-%DV_KIND= FFD_SETTING
+%DV_KIND= FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT, FFD_CONTROL_POINT
+DV_KIND= FFD_SETTING
 %
 % Marker of the surface in which we are going apply the shape deformation
 DV_MARKER= ( airfoil )
@@ -244,11 +244,12 @@ DV_MARKER= ( airfoil )
 %       - FFD_CAMBER ( FFD_BoxTag, i_Ind, j_Ind )
 %       - FFD_THICKNESS ( FFD_BoxTag, i_Ind, j_Ind )
 %       - FFD_VOLUME ( FFD_BoxTag, i_Ind, j_Ind )
-%DV_PARAM= ( airfoil_box, 5, 0, 0, 0.0, 1.0, 0.0 )
-DV_PARAM= ( airfoil_box, 0, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 1, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 2, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 3, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 4, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 5, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 6, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 7, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 8, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 9, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 10, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 0, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 1, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 2, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 3, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 4, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 5, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 6, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 7, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 8, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 9, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 10, 1, 0, 0.0, 1.0, 0.0 )
+%DV_PARAM= ( airfoil_box, 0, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 1, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 2, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 3, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 4, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 5, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 6, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 7, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 8, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 9, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 10, 0, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 0, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 1, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 2, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 3, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 4, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 5, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 6, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 7, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 8, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 9, 1, 0, 0.0, 1.0, 0.0 ); ( airfoil_box, 10, 1, 0, 0.0, 1.0, 0.0 )
+DV_PARAM= ( airfoil_box, 5, 0, 0, 0.0, 1.0, 0.0 )
 %
 % New value of the shape deformation
-DV_VALUE= 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05
+%DV_VALUE= 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05
+DV_VALUE= 0.05
 
 % ------------------------ GRID DEFORMATION PARAMETERS ------------------------%
 %
