--- a/TestCases/disc_adj_euler/naca0012_pitching/inv_NACA0012_pitching.cfg
+++ b/TestCases/disc_adj_euler/naca0012_pitching/inv_NACA0012_pitching.cfg
@@ -12,7 +12,7 @@ MATH_PROBLEM= DISCRETE_ADJOINT
 RESTART_SOL= NO
 SINGLEZONE_DRIVER= YES
 TIME_ITER= 151
-ITER= 350
+INNER_ITER= 350
 
 %EXT_ITER= 151
 %UNST_INT_ITER= 110
