Output fix for pitching adj case

--- a/TestCases/disc_adj_euler/naca0012_pitching/inv_NACA0012_pitching.cfg
+++ b/TestCases/disc_adj_euler/naca0012_pitching/inv_NACA0012_pitching.cfg
@@ -16,6 +16,7 @@ INNER_ITER= 350
 
 %EXT_ITER= 151
 %UNST_INT_ITER= 110
+SCREEN_OUTPUT=(TIME_ITER, INNER_ITER, RMS_ADJ_DENSITY, RMS_ADJ_ENERGY, SENS_PRESS, SENS_AOA)
 % ------------------------- UNSTEADY SIMULATION -------------------------------%
 %
 % Unsteady simulation (NO, TIME_STEPPING, DUAL_TIME_STEPPING-1ST_ORDER,
