Update travis and serial_regression.py

--- a/TestCases/wall_functions/turb_SST-WF_flatplate.cfg
+++ b/TestCases/wall_functions/turb_SST-WF_flatplate.cfg
@@ -17,13 +17,13 @@
 PHYSICAL_PROBLEM= NAVIER_STOKES
 %
 % If Navier-Stokes, kind of turbulent model (NONE, SA)
-KIND_TURB_MODEL= SA
+KIND_TURB_MODEL= SST
 %
 % Mathematical problem (DIRECT, CONTINUOUS_ADJOINT)
 MATH_PROBLEM= DIRECT
 %
 % Restart solution (NO, YES)
-RESTART_SOL= NO
+RESTART_SOL= YES
 
 % ----------- COMPRESSIBLE AND INCOMPRESSIBLE FREE-STREAM DEFINITION ----------%
 %
@@ -59,7 +59,7 @@ REF_LENGTH= 1.0
 REF_AREA= 2.0
 % Flow non-dimensionalization (DIMENSIONAL, FREESTREAM_PRESS_EQ_ONE,
 %                              FREESTREAM_VEL_EQ_MACH, FREESTREAM_VEL_EQ_ONE)
-REF_DIMENSIONALIZATION= FREESTREAM_PRESS_EQ_ONE
+REF_DIMENSIONALIZATION= DIMENSIONAL
 
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
@@ -74,7 +74,8 @@ MARKER_INLET= ( inlet, 302.4, 117691.7874, 1.0, 0.0, 0.0 )
 %
 % Outlet boundary marker(s) (NONE = no marker)
 % Format: ( outlet marker, back pressure, ... )
-MARKER_OUTLET= ( outlet, 114455.0, farfield, 114455.0 )
+MARKER_OUTLET= ( outlet, 114455.0)
+MARKER_FAR = ( farfield )
 %
 % Symmetry boundary marker(s) (NONE = no marker)
 MARKER_SYM= ( symmetry )
@@ -105,7 +106,7 @@ CFL_ADAPT_PARAM= ( 1.5, 0.5, 10.0, 500.0 )
 RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
 %
 % Number of total iterations
-EXT_ITER= 99999
+EXT_ITER= 20
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
@@ -222,7 +223,7 @@ CAUCHY_FUNC_FLOW= DRAG
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
 % Mesh input file
-MESH_FILENAME= mesh_flatplate_yplus_50_137x97.su2
+MESH_FILENAME= mesh_flatplate_yplus_100_137x97.su2
 %
 % Mesh input file format (SU2, CGNS, NETCDF_ASCII)
 MESH_FORMAT= SU2
@@ -237,7 +238,7 @@ SOLUTION_FLOW_FILENAME= solution_flow.dat
 SOLUTION_ADJ_FILENAME= solution_adj.dat
 %
 % Output file format (PARAVIEW, TECPLOT, SLT)
-OUTPUT_FORMAT= TECPLOT
+OUTPUT_FORMAT= PARAVIEW_BINARY
 %
 % Output file convergence history (w/o extension) 
 CONV_FILENAME= history
