--- a/TestCases/ddes/flatplate/iddes_SST_flatplate.cfg
+++ b/TestCases/ddes/flatplate/iddes_SST_flatplate.cfg
@@ -1,10 +1,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: Turbulent flow over flat plate with zero pressure gradient %
-% Author: Thomas D. Economon                                                   %
+% Case description: Turbulent flow over ZPG flat plate (IDDES-SST)             %
+% Author: Eduardo S. Molina                                                   %
 % Institution: Stanford University                                             %
-% Date: 2011.11.10                                                             %
+% Date: 2019.09.25                                                             %
 % File Version 6.2.0 "Falcon"                                                %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -17,8 +17,8 @@
 PHYSICAL_PROBLEM= NAVIER_STOKES
 %
 % If Navier-Stokes, kind of turbulent model (NONE, SA)
-KIND_TURB_MODEL= SA
-HYBRID_RANSLES= SA_EDDES
+KIND_TURB_MODEL= SST
+HYBRID_RANSLES= SST_EIDDES
 %
 %
 % Mathematical problem (DIRECT, CONTINUOUS_ADJOINT)
