--- a/TestCases/coupled_cht/disc_adj_incomp_2d/solid_cylinder2.cfg
+++ b/TestCases/coupled_cht/disc_adj_incomp_2d/solid_cylinder2.cfg
@@ -30,10 +30,7 @@ OBJECTIVE_FUNCTION= TOTAL_HEATFLUX
 OBJECTIVE_WEIGHT = 1.0
 %
 % Read binary restart files (YES, NO)
-READ_BINARY_RESTART = NO
-%
-% Write binary restart files (YES, NO)
-WRT_BINARY_RESTART = NO
+READ_BINARY_RESTART = YES
 
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
@@ -139,7 +136,7 @@ SOLUTION_ADJ_FILENAME= solution_adj.dat
 %
 % Output file format (TECPLOT, TECPLOT_BINARY, PARAVIEW,
 %                     FIELDVIEW, FIELDVIEW_BINARY)
-OUTPUT_FORMAT= TECPLOT
+TABULAR_FORMAT= TECPLOT
 %
 % Output file convergence history (w/o extension)
 CONV_FILENAME= history
