--- a/TestCases/coupled_cht/incomp_2d/flow_cylinder.cfg
+++ b/TestCases/coupled_cht/incomp_2d/flow_cylinder.cfg
@@ -33,10 +33,7 @@ OBJECTIVE_FUNCTION= TOTAL_HEATFLUX
 OBJECTIVE_WEIGHT = 1.0
 %
 % Read binary restart files (YES, NO)
-READ_BINARY_RESTART = NO
-%
-% Write binary restart files (YES, NO)
-WRT_BINARY_RESTART = NO
+READ_BINARY_RESTART = YES
 %
 % Data written to history file
 HISTORY_OUTPUT=(ITER, RMS_RES, HEAT )
@@ -201,7 +198,7 @@ SOLUTION_ADJ_FILENAME= solution_adj.dat
 %
 % Output file format (TECPLOT, TECPLOT_BINARY, PARAVIEW,
 %                     FIELDVIEW, FIELDVIEW_BINARY)
-OUTPUT_FORMAT= TECPLOT
+TABULAR_FORMAT= TECPLOT
 %
 % Output file convergence history (w/o extension)
 CONV_FILENAME= history
