--- a/TestCases/fixed_cl/naca0012/inv_NACA0012.cfg
+++ b/TestCases/fixed_cl/naca0012/inv_NACA0012.cfg
@@ -112,7 +112,7 @@ OBJECTIVE_FUNCTION= DRAG
 CFL_NUMBER= 4.0
 %
 % Number of total iterations
-ITER=101 
+ITER=1000 
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
@@ -246,13 +246,15 @@ VISUALIZE_SURFACE_DEF= NO
 VISUALIZE_VOLUME_DEF= NO
 
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
-% Convergence criteria (CAUCHY, RESIDUAL)
 %
+% Convergence criteria (CAUCHY, RESIDUAL)
 CONV_CRITERIA= RESIDUAL
 %
+% Field on which convergence criteria is applied
+CONV_FIELD= REL_RMS_DENSITY
 %
 % Min value of the residual (log10 of the residual)
-CONV_RESIDUAL_MINVAL= -12
+CONV_RESIDUAL_MINVAL= -6
 %
 % Start Cauchy criteria at iteration number
 CONV_STARTITER= 10
