--- a/TestCases/optimization_euler/multipoint_naca0012/inv_NACA0012_multipoint.cfg
+++ b/TestCases/optimization_euler/multipoint_naca0012/inv_NACA0012_multipoint.cfg
@@ -88,7 +88,7 @@ CFL_ADAPT_PARAM= ( 1.5, 0.5, 1.0, 100.0 )
 RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
 %
 % Number of total iterations
-ITER= 2500
+ITER= 100
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
@@ -342,6 +342,7 @@ MULTIPOINT_MACH_NUMBER= (0.79, 0.8, 0.81)
 %MULTIPOINT_TARGET_CL= (0.8, 0.8, 0.8)
 %MULTIPOINT_FREESTREAM_PRESSURE= (101325.0, 101325.0, 101325.0)
 %MULTIPOINT_FREESTREAM_TEMPERATURE= (288.15, 288.15, 288.15)
+MULTIPOINT_MESH_FILENAME= ( mesh_NACA0012_inv.su2, mesh_NACA0012_inv_2.su2, mesh_NACA0012_inv_2.su2)
 %
 % Optimization objective function with scaling factor
 % ex= Objective * Scale
