--- a/TestCases/cont_adj_euler/wedge/inv_wedge_ROE_multiobj.cfg
+++ b/TestCases/cont_adj_euler/wedge/inv_wedge_ROE_multiobj.cfg
@@ -29,7 +29,8 @@ NZONES= 1
 %
 % New single zone driver
 SINGLEZONE_DRIVER= YES
-
+%
+OUTPUT_FILES=(RESTART_ASCII)
 % ----------- COMPRESSIBLE AND INCOMPRESSIBLE FREE-STREAM DEFINITION ----------%
 %
 % Mach number (non-dimensional, based on the free-stream values)
