--- a/config_template.cfg
+++ b/config_template.cfg
@@ -587,6 +587,9 @@ INLET_TYPE= TOTAL_CONDITIONS
 % Read inlet profile from a file (YES, NO) default: NO
 SPECIFIED_INLET_PROFILE= NO
 %
+% Force the imposition of the inlet profile from a file (YES, NO) default: NO
+FORCE_INLET_PROFILE= NO
+%
 % File specifying inlet profile
 INLET_FILENAME= inlet.dat
 %
