Splitting test case files

--- a/QuickStart/inv_NACA0012.cfg
+++ b/QuickStart/inv_NACA0012.cfg
@@ -19,6 +19,7 @@ SOLVER= EULER
 % Mathematical problem (DIRECT, CONTINUOUS_ADJOINT)
 MATH_PROBLEM= DIRECT
 %
+MULTIZONE=YES
 % Restart solution (NO, YES)
 RESTART_SOL= NO
 SCREEN_OUTPUT=(INNER_ITER, WALL_TIME, RMS_DENSITY, LIFT, DRAG, CAUCHY_SENS_PRESS, CAUCHY_DRAG)
@@ -98,8 +99,8 @@ OBJECTIVE_FUNCTION= DRAG
 CFL_NUMBER= 4.0
 %
 % Number of total iterations
-ITER= 250
-
+INNER_ITER= 250
+WRT_ZONE_CONV=YES
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
 % Linear solver for implicit formulations (BCGSTAB, FGMRES)
