Added message after finishing meson configuration

--- a/SU2_CFD/src/meson.build
+++ b/SU2_CFD/src/meson.build
@@ -116,6 +116,7 @@ su2_cfd_src += files(['drivers/CDriver.cpp',
                       'drivers/CDummyDriver.cpp'])
 
 if get_option('enable-normal')
+  message('Normal mode enabled.')
   su2_cfd = executable('SU2_CFD',
                        su2_cfd_src, 
       		       install : true, 
@@ -124,6 +125,7 @@ if get_option('enable-normal')
 endif
 
 if get_option('enable-autodiff')
+  message('Auto diff. mode enabled.')
   su2_cfd_ad = executable('SU2_CFD_AD',
                           su2_cfd_src,
 			  install : true, 
@@ -132,6 +134,7 @@ if get_option('enable-autodiff')
 endif
 
 if get_option('enable-directdiff')
+  message('Direct diff. mode enabled.')
   su2_cfd_dd = executable('SU2_CFD_DIRECTDIFF',
                           su2_cfd_src,
 			  install : true, 
