Initial fixes - runs and results are very similar but BGS residual differs slightly.

--- a/TestCases/disc_adj_fsi/config.cfg
+++ b/TestCases/disc_adj_fsi/config.cfg
@@ -5,5 +5,5 @@ CONFIG_LIST=(configFlow.cfg, configFEA.cfg)
 MARKER_ZONE_INTERFACE = (UpperWall, UpperWallS, LowerWall, LowerWallS)
 
 ADJ_FSI= YES
-FSI_ITER=4
+OUTER_ITER= 4
 MESH_FILENAME= mesh.su2
