--- a/TestCases/disc_adj_fsi/config.cfg
+++ b/TestCases/disc_adj_fsi/config.cfg
@@ -7,3 +7,5 @@ MARKER_ZONE_INTERFACE = (UpperWall, UpperWallS, LowerWall, LowerWallS)
 ADJ_FSI= YES
 OUTER_ITER= 4
 MESH_FILENAME= mesh.su2
+
+OBJECTIVE_FUNCTION = REFERENCE_GEOMETRY
