--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,11 @@ compiler:
 notifications:
     email:
         recipients:
-            - su2code-dev@lists.stanford.edu
+            - ruben.sanchez@scicomp.uni-kl.de
   
 branches:
     only:
-        - develop
+        - fix_discadjfsi
 
 virtualenv:
   system_site_packages: true
