--- a/TestCases/radiation/p1model/config.cfg
+++ b/TestCases/radiation/p1model/config.cfg
@@ -26,7 +26,7 @@ CFL_NUMBER_RAD = 10000
 TIME_DISCRE_RADIATION= EULER_IMPLICIT
 
 SINGLEZONE_DRIVER=YES
-SCREEN_OUTPUT=(INNER_ITER, RMS_PRESSURE, RMS_VELOCITY-X, RMS_HEAT, RMS_RAD_ENERGY)
+SCREEN_OUTPUT=(INNER_ITER, RMS_PRESSURE, RMS_VELOCITY-X, RMS_TEMPERATURE, RMS_RAD_ENERGY)
 
 INC_NONDIM = DIMENSIONAL
 
