--- a/TestCases/incomp_navierstokes/streamwise_periodic/half_cylinder_2D/half_cylinder_2D.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/half_cylinder_2D/half_cylinder_2D.cfg
@@ -153,7 +153,7 @@ CFL_ADAPT= NO
 CFL_ADAPT_PARAM= ( 1.5, 0.5, 15.0, 10000.0 )
 %
 % Number of total iterations
-EXT_ITER= 400
+ITER= 400
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
@@ -206,25 +206,12 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 %
 CONV_CRITERIA= RESIDUAL
 %
-% Residual reduction (order of magnitude with respect to the initial value)
-RESIDUAL_REDUCTION= 18
-%
 % Min value of the residual (log10 of the residual)
-RESIDUAL_MINVAL= -24
+CONV_RESIDUAL_MINVAL= -24
 %
 % Start convergence criteria at iteration number
-STARTCONV_ITER= 10
+CONV_STARTITER= 10
 %
-% Number of elements to apply the criteria
-CAUCHY_ELEMS= 100
-%
-% Epsilon to control the series convergence
-CAUCHY_EPS= 1E-6
-%
-% Function to apply the criteria (LIFT, DRAG, NEARFIELD_PRESS, SENS_GEOMETRY, 
-% 	      	    		 SENS_MACH, DELTA_LIFT, DELTA_DRAG)
-CAUCHY_FUNC_FLOW= DRAG
-
 % ------------------------- INPUT/OUTPUT INFORMATION ----------------------.su2
 %
 % Mesh input file
@@ -237,25 +224,25 @@ MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
 %
 % Restart flow input file
-SOLUTION_FLOW_FILENAME= solution_flow.dat
+SOLUTION_FILENAME= solution_flow.dat
 %
 % Restart adjoint input file
 SOLUTION_ADJ_FILENAME= solution_adj.dat
 %
 % Output file format (PARAVIEW, TECPLOT, STL)
-OUTPUT_FORMAT= TECPLOT_BINARY
+OUTPUT_FILES= (RESTART, PARAVIEW, SURFACE_PARAVIEW)
 %
 % Output file convergence history (w/o extension) 
 CONV_FILENAME= history
 %
 % Output file restart flow
-RESTART_FLOW_FILENAME= restart_flow.dat
+RESTART_FILENAME= restart_flow.dat
 %
 % Output file restart adjoint
 RESTART_ADJ_FILENAME= restart_adj.dat
 %
 % Output file flow (w/o extension) variables
-VOLUME_FLOW_FILENAME= flow
+VOLUME_FILENAME= flow
 %
 % Output file adjoint (w/o extension) variables
 VOLUME_ADJ_FILENAME= adjoint
@@ -264,7 +251,7 @@ VOLUME_ADJ_FILENAME= adjoint
 GRAD_OBJFUNC_FILENAME= of_grad.dat
 %
 % Output file surface flow coefficient (w/o extension)
-SURFACE_FLOW_FILENAME= surface_flow
+SURFACE_FILENAME= surface_flow
 %
 % Output file surface adjoint coefficient (w/o extension)
 SURFACE_ADJ_FILENAME= surface_adjoint
