--- a/TestCases/incomp_navierstokes/streamwise_periodic/half_cylinder_2D/half_cylinder_2D.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/half_cylinder_2D/half_cylinder_2D.cfg
@@ -224,10 +224,10 @@ MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
 %
 % Restart flow input file
-SOLUTION_FILENAME= solution_flow.dat
+SOLUTION_FILENAME= solution_flow
 %
 % Restart adjoint input file
-SOLUTION_ADJ_FILENAME= solution_adj.dat
+SOLUTION_ADJ_FILENAME= solution_adj
 %
 % Output file format (PARAVIEW, TECPLOT, STL)
 OUTPUT_FILES= (RESTART, PARAVIEW, SURFACE_PARAVIEW)
@@ -236,10 +236,10 @@ OUTPUT_FILES= (RESTART, PARAVIEW, SURFACE_PARAVIEW)
 CONV_FILENAME= history
 %
 % Output file restart flow
-RESTART_FILENAME= restart_flow.dat
+RESTART_FILENAME= restart_flow
 %
 % Output file restart adjoint
-RESTART_ADJ_FILENAME= restart_adj.dat
+RESTART_ADJ_FILENAME= restart_adj
 %
 % Output file flow (w/o extension) variables
 VOLUME_FILENAME= flow
@@ -248,7 +248,7 @@ VOLUME_FILENAME= flow
 VOLUME_ADJ_FILENAME= adjoint
 %
 % Output objective function gradient (using continuous adjoint)
-GRAD_OBJFUNC_FILENAME= of_grad.dat
+GRAD_OBJFUNC_FILENAME= of_grad
 %
 % Output file surface flow coefficient (w/o extension)
 SURFACE_FILENAME= surface_flow
