--- a/.travis.yml
+++ b/.travis.yml
@@ -76,7 +76,7 @@ before_script:
     - cp -R ./TestData/* ./TestCases/
 
     # Get the tutorial cases
-    - git clone --depth=1 -b develop https://github.com/su2code/su2code.github.io ./Tutorials
+    - git clone --depth=1 -b enhancement_fixed_cl https://github.com/su2code/su2code.github.io ./Tutorials
     
     # Enter the SU2/TestCases/ directory, which is now ready to run
     - cd TestCases/
