Fix compiler warnings. Add recovered values to new output.

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -561,8 +561,13 @@ BODY_FORCE_VECTOR= ( 0.0, 0.0, 0.0 )
 
 % --------------------- STREAMWISE PERIODICITY DEFINITION ---------------------%
 %
-% Specify type of streamwise periodicty (NONE, PRESSURE_DROP, MASSFLOW)
+% Specify type of streamwise periodicty (default=NONE, PRESSURE_DROP, MASSFLOW)
 KIND_STREAMWISE_PERIODIC= NONE
+%
+% Use streamwise periodic temperature (default=NO, YES)
+% If YES, the heatflux is taken out at the outlet
+% This option is only necessary if INC_ENERGY_EQUATION=YES
+STREAMWISE_PERIODIC_TEMPERATURE= NO
 %
 % Delta P value that drives the flow as a source term in the momentum equations.
 % Defaults to 1.0.
