--- a/TestCases/incomp_navierstokes/streamwise_periodic/half_cylinder_2D/half_cylinder_2D.cfg
+++ b/TestCases/incomp_navierstokes/streamwise_periodic/half_cylinder_2D/half_cylinder_2D.cfg
@@ -96,6 +96,7 @@ MU_CONSTANT= 1e-4
 %
 % Specify type of streamwise periodicty (NONE, PRESSURE_DROP, MASSFLOW)
 KIND_STREAMWISE_PERIODIC= MASSFLOW
+STREAMWISE_PERIODIC_TEMPERATURE= YES
 %
 % Delta P value that drives the flow as a source term in the momentum equations.
 % Defaults to 1.0.
@@ -230,7 +231,8 @@ SOLUTION_FILENAME= solution_flow
 SOLUTION_ADJ_FILENAME= solution_adj
 %
 % Output file format (PARAVIEW, TECPLOT, STL)
-OUTPUT_FILES= (RESTART, PARAVIEW, SURFACE_PARAVIEW)
+OUTPUT_FILES= (RESTART_ASCII, PARAVIEW_ASCII, SURFACE_PARAVIEW_ASCII)
+OUTPUT_WRT_FREQ= 100
 %
 % Output file convergence history (w/o extension) 
 CONV_FILENAME= history
