--- a/TestCases/fixed_cl/naca0012/inv_NACA0012.cfg
+++ b/TestCases/fixed_cl/naca0012/inv_NACA0012.cfg
@@ -41,7 +41,7 @@ FREESTREAM_PRESSURE= 101325.0
 % Free-stream temperature (288.15 K by default)
 FREESTREAM_TEMPERATURE= 288.15
 
-% -------------------------- CL DRIVER DEFINITION ----------------------------%
+% -------------------------- CL & CM DRIVER DEFINITION ------------------------%
 %
 % Activate fixed lift mode (specify a CL instead of AoA, NO/YES)
 FIXED_CL_MODE= YES
@@ -49,17 +49,14 @@ FIXED_CL_MODE= YES
 % Target coefficient of lift for fixed lift mode (0.0 by default)
 TARGET_CL= 0.30
 %
+% Estimation of dCL/dAlpha (0.2 per degree by default)
+DCL_DALPHA= 0.2
+%
 % Maximum number of iterations between AoA updates
 UPDATE_AOA_ITER_LIMIT= 20
 %
 % Number of iterations to evaluate dCL/dAlpha at the end of the simulation
 ITER_DCL_DALPHA= 250
-%
-% Estimation of dCL/dAlpha (0.2 per degree by default)
-DCL_DALPHA= 0.2
-%
-% Estimation dCD/dCL (0.07 by default)
-DCD_DCL_VALUE= 0.07
 %
 % Evaluate DeltaC_D/DeltaC_X during runtime (YES) or use the provided numbers (NO).
 EVAL_DOF_DCX= YES
@@ -114,7 +111,7 @@ OBJECTIVE_FUNCTION= DRAG
 CFL_NUMBER= 4.0
 %
 % Number of total iterations
-ITER=1000 
+ITER= 1001
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
@@ -248,15 +245,13 @@ VISUALIZE_SURFACE_DEF= NO
 VISUALIZE_VOLUME_DEF= NO
 
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
-%
 % Convergence criteria (CAUCHY, RESIDUAL)
+%
 CONV_CRITERIA= RESIDUAL
 %
-% Field on which convergence criteria is applied
-CONV_FIELD= REL_RMS_DENSITY
 %
 % Min value of the residual (log10 of the residual)
-CONV_RESIDUAL_MINVAL= -6
+CONV_RESIDUAL_MINVAL= -12
 %
 % Start Cauchy criteria at iteration number
 CONV_STARTITER= 10
