add libROM support from feature_libROM

--- a/configure.ac
+++ b/configure.ac
@@ -103,6 +103,9 @@ AC_ARG_WITH(Mutationpp-lib,
 AC_ARG_WITH(Mutationpp-include,
    	AS_HELP_STRING([--with-Mutationpp-include[=ARG]], [Mutation++ include directory, ARG = path to mutation++.h]),
 	[with_Mutationpp_include=$withval], [with_Mutationpp_include="no"])
+AC_ARG_WITH(libROM-lib,
+        AS_HELP_STRING([--with-libROM-lib[=ARG]], [LLNL libROM library directory, ARG = path to librom.a]),
+        [with_libROM_lib=$withval], [with_libROM_lib="no"])
 
 # Check for disabling of SU2 modules
 
@@ -221,7 +224,7 @@ su2_externals_INCLUDES="-I\$(top_srcdir)/externals/CLI11 $su2_externals_INCLUDES
 
 ##########################
 
-# check for lib
+# check for Mutation lib
 Mutationpplib=libmutation++.a
 Mutationppheader=mutation++.h
 have_Mutationpp="no"
@@ -278,6 +281,58 @@ if test "${MKLROOT+set}" = set; then
     have_MKL="yes"
   fi
 fi
+
+##########################
+
+# check for libROM lib
+libROMlib=librom.a
+have_libROM="no"
+
+if test "$with_libROM_lib" != "no"
+then 
+	AC_CHECK_FILE([$with_libROM_lib/$libROMlib],[have_libROM="yes"],[have_libROM="no"])
+	libROMlibinc=lrom
+	if test "$have_libROM" == "no"
+	then
+		libROMlib=libROM.a
+		libROMlibinc=lROM
+		AC_CHECK_FILE([$with_libROM_lib/$libROMlib],[have_libROM="yes"],[have_libROM="no"])
+		if test "$have_libROM" == "no"
+		then
+			AC_MSG_ERROR([libROM requested but library file not found.])
+		fi
+	fi
+fi
+
+if test "$have_MKL" != "yes"
+then
+	have_libROM="no"
+	AC_MSG_ERROR([libROM requested but required MKL not included or found.])
+fi
+
+HDF5lib=libhdf5.a
+have_HDF5="no"
+if test "$with_libROM_lib" != "no"
+then
+        AC_CHECK_FILE(["$HDF5/lib/"$HDF5lib],[have_HDF5="yes"],[have_HDF5="no"])
+	if test "$have_HDF5" == "no"
+	then
+		AC_MSG_ERROR([libROM requested but required library HDF5 not found.])
+	fi
+fi
+
+
+if test "$have_libROM" != "no"
+then 
+	AM_CONDITIONAL(BUILD_LIBROM,true)
+	CPPFLAGS="-DHAVE_LIBROM $CPPFLAGS"
+	LDFLAGS="-L$with_libROM_lib -L$with_libROM_lib/ScalaWRAP -L$HDF5/lib"
+	CXXFLAGS=" -I$with_libROM_lib -std=c++11 $CXXFLAGS"
+	LIBS="$ -lmkl_scalapack_lp64 -lmkl_blacs_intelmpi_lp64 -lhdf5 $with_libROM_lib/"$libROMlib" -"$libROMlibinc" -lscalawrap $LIBS"
+else
+	AM_CONDITIONAL(BUILD_LIBROM,false)
+fi
+
 
 ###########################
 # Determine what versions of the code to build
@@ -407,6 +462,7 @@ Build Configuration Summary:
     CGNS support:         $enablecgns
     Mutation++ support:   $have_Mutationpp
     MKL support:          $have_MKL
+    libROM support:	  $have_libROM
     Datatype support:
         double            $build_NORMAL
         codi_reverse      $build_CODI_REVERSE
