--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,8 @@ before_install:
     - sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 10
     # Install the necessary packages using apt-get with sudo
     - sudo apt-get update -qq
-    - sudo apt-get install -qq build-essential python3-numpy python3-scipy libmpich-dev mpich swig python3-mpi4py  
+    - sudo apt-get install -qq build-essential python3-pip python3-numpy python3-scipy libmpich-dev mpich swig 
+    - pip3 install mpi4py
     # to avoid interference with MPI
     - test -n $CC  && unset CC
     - test -n $CXX && unset CXX
@@ -62,6 +63,7 @@ install:
     - $CONFIGURE_COMMAND
     - ./meson.py build --reconfigure --optimization=2
     - ./meson.py build --reconfigure --warnlevel=2
+    - ./meson.py build --reconfigure -Dpython_path=/usr/local/lib/python3.5/dist-packages
     - ./ninja -C build install
 
     # Add environmental variables according to the configure step
