--- a/.travis.yml
+++ b/.travis.yml
@@ -51,8 +51,8 @@ before_install:
     - sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 10
     # Install the necessary packages using apt-get with sudo
     - sudo apt-get update -qq
-    - sudo apt-get install -qq build-essential python3-setuptools python3-pip python3-numpy python3-scipy libmpich-dev mpich swig 
-    - pip3 install wheel mpi4py
+    - sudo apt-get install -qq build-essential python3-dev python3-setuptools python3-pip python3-numpy python3-scipy libmpich-dev mpich swig 
+    - pip3 install mpi4py
     # to avoid interference with MPI
     - test -n $CC  && unset CC
     - test -n $CXX && unset CXX
