Added one shot output class

--- a/SU2_CFD/src/meson.build
+++ b/SU2_CFD/src/meson.build
@@ -40,6 +40,7 @@ su2_cfd_src = files(['solver_direct_transition.cpp',
 su2_cfd_src += files(['output/CAdjElasticityOutput.cpp',
                       'output/CAdjFlowCompOutput.cpp',
                       'output/CAdjFlowIncOutput.cpp',
+                      'output/COneShotOutput.cpp',
                       'output/CAdjHeatOutput.cpp',
                       'output/CBaselineOutput.cpp',
                       'output/CMultizoneOutput.cpp',
