final clean ups

--- a/TestCases/fixed_cl/naca0012/inv_NACA0012.cfg
+++ b/TestCases/fixed_cl/naca0012/inv_NACA0012.cfg
@@ -41,7 +41,7 @@ FREESTREAM_PRESSURE= 101325.0
 % Free-stream temperature (288.15 K by default)
 FREESTREAM_TEMPERATURE= 288.15
 
-% -------------------------- CL & CM DRIVER DEFINITION ------------------------%
+% -------------------------- CL DRIVER DEFINITION -----------------------------%
 %
 % Activate fixed lift mode (specify a CL instead of AoA, NO/YES)
 FIXED_CL_MODE= YES
