--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ before_install:
     # Install the necessary packages using apt-get with sudo
     - sudo apt-get update -qq
     - sudo apt-get install -qq build-essential python3-dev python3-setuptools python3-pip python3-numpy python3-scipy libmpich-dev mpich swig 
-    - pip3 install --upgrade pip
+    - pip3 install wheel
     - pip3 install mpi4py
     # to avoid interference with MPI
     - test -n $CC  && unset CC
