--- a/config_template.cfg
+++ b/config_template.cfg
@@ -765,7 +765,7 @@ CFL_ADAPT= NO
 %
 % Parameters of the adaptive CFL number (factor down, factor up, CFL min value,
 %                                        CFL max value )
-CFL_ADAPT_PARAM= ( 1.5, 0.5, 1.25, 50.0 )
+CFL_ADAPT_PARAM= ( 0.1, 2.0, 10.0, 1e10 )
 %
 % Maximum Delta Time in local time stepping simulations
 MAX_DELTA_TIME= 1E6
