--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -1,6 +1,14 @@
 name: Regression Testing
 
-on: [push]
+on: 
+  push:
+    branches-ignore:
+      - 'develop'
+      - 'master'
+  pull_request:
+    branches: 
+      - 'develop'
+      - 'master'
 
 jobs:
   build:
