--- a/docker/test/Dockerfile
+++ b/docker/test/Dockerfile
@@ -1,4 +1,4 @@
-FROM su2code/build-su2:latest
+FROM su2code/build-su2:20191029
 
 # Copies your code file from your action repository to the filesystem path `/` of the container
 COPY runTests.sh /runTests.sh
