Enabling running on push to master/develop

--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -1,6 +1,10 @@
 name: Regression Testing
 
-on: 
+on:
+  push:
+    branches:
+      - 'develop'
+      - 'master'
   pull_request:
     branches: 
       - 'develop'
