--- a/TestCases/rans/oneram6/turb_ONERAM6.cfg
+++ b/TestCases/rans/oneram6/turb_ONERAM6.cfg
@@ -26,7 +26,7 @@ MATH_PROBLEM= DIRECT
 RESTART_SOL= NO
 % New singlezone driver
 SINGLEZONE_DRIVER= YES
-
+WRT_STL_SOL= YES
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
 %
 % Mach number (non-dimensional, based on the free-stream values)
@@ -139,7 +139,7 @@ CFL_ADAPT_PARAM= ( 1.5, 0.5, 1.0, 100.0 )
 RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
 %
 % Number of total iterations
-ITER= 999999
+ITER= 1
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
@@ -252,7 +252,7 @@ SOLUTION_FILENAME= solution_flow.dat
 SOLUTION_ADJ_FILENAME= solution_adj.dat
 %
 % Output file format (PARAVIEW, TECPLOT, STL)
-OUTPUT_FORMAT= TECPLOT
+OUTPUT_FORMAT= PARAVIEW_BINARY
 %
 % Output file convergence history (w/o extension) 
 CONV_FILENAME= history
