--- a/TestCases/euler/oneram6/inv_ONERAM6.cfg
+++ b/TestCases/euler/oneram6/inv_ONERAM6.cfg
@@ -18,7 +18,7 @@ SOLVER= EULER
 MATH_PROBLEM= DIRECT
 %
 % Restart solution (NO, YES)
-RESTART_SOL= YES
+RESTART_SOL= NO
 %
 % Write binary restart files (YES, NO)
 WRT_BINARY_RESTART= NO
@@ -243,6 +243,7 @@ SOLUTION_ADJ_FILENAME= solution_adj.dat
 MESH_FORMAT= SU2
 %
 % Output tabular format (CSV, TECPLOT)
+OUTPUT_FILES= (STL, SURFACE_PARAVIEW)
 TABULAR_FORMAT= CSV
 %
 % Output file convergence history
