enabling workflow for this branch

--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - 'develop'
       - 'master'
+      - 'workflow_cache'
   pull_request:
     branches: 
       - 'develop'
