--- a/.github/workflows/release-management.yml
+++ b/.github/workflows/release-management.yml
@@ -2,15 +2,48 @@ name: Release Management
 
 on:
   push:
+    # branches to consider in the event; optional, defaults to all
     branches:
-      - develop
+      - feature_release_drafter
 
 jobs:
-  update_draft_release:
-    name: Update Draft Release 
+  build_and_upload:
+    name: Build SU2
+    strategy:
+      fail-fast: false
+      matrix:
+        os_bin: [macos64, linux64, win64]
+        include: 
+          - os_bin: win64
+            flags: '-Dwith-mpi=disabled --cross-file=/hostfile_windows -Denable-tecio=false'
+          - os_bin: macos64
+            flags: '-Dwith-mpi=disabled --cross-file=/hostfile_darwin'
+          - os_bin: linux64
+            flags: '-Dwith-mpi=disabled'
     runs-on: ubuntu-latest
     steps:
-      - name: Run Drafter
-        uses: talbring/jenkins-release-drafter@v5.2.0-jenkins-5
+      - name: Build
+        uses: docker://su2code/build-su2-cross:latest
+        with:
+          args: -b ${{ github.sha }} -f "${{matrix.flags}}"
+      - name: Create Archive
+        run: |
+          cd install
+          zip -r ../${{matrix.os_bin}}.zip bin/*  
+        # Drafts your next Release notes as Pull Requests are merged into "master"
+      - uses: talbring/jenkins-release-drafter@v5.2.0-jenkins-8
+        name: Update Release
+        id: update_release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1.0.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.update_release.outputs.uploadurl }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ${{matrix.os_bin}}.zip
+          asset_name: SU2-${{ steps.update_release.outputs.tagname }}-${{matrix.os_bin}}.zip
+          asset_content_type: application/zip
+          
