Added meson scripts

--- a/meson.build
+++ b/meson.build
@@ -12,11 +12,18 @@ python = pymod.find_installation()
 su2_cpp_args = []
 su2_deps     = [declare_dependency(include_directories: 'externals/CLI11')]
 
-default_warning_flags = ['-Wno-unused-parameter',
-                         '-Wno-empty-body',
-                         '-Wno-format-security',
-                         '-Wno-deprecated-declarations',
-                         '-Wno-non-virtual-dtor']
+if build_machine.system() == 'windows'
+  default_warning_flags = []
+else
+  default_warning_flags = ['-Wno-unused-parameter',
+                           '-Wno-empty-body',
+                           '-Wno-format-security',
+                           '-Wno-deprecated-declarations',
+                           '-Wno-non-virtual-dtor']
+endif
+
+# meson script path
+script_path = meson.source_root() / 'meson_scripts'
 
 # external dependencies 
 mpi_dep = [dependency('mpi', language:'c', required : get_option('with-mpi')), 
