--- a/externals/tecio/meson.build
+++ b/externals/tecio/meson.build
@@ -1,7 +1,12 @@
-check_dir = run_command('test', '-d', 'boost')
+check_dir = run_command('python3', 
+                        script_path / 'check_dir.py',
+                        'boost')
 if check_dir.returncode() != 0
   message('Extracting boost ...')
-  extract_boost = run_command('tar', '-xzf', 'boost.tar.gz', '-C', './')
+  extract_boost = run_command('python3', 
+                              script_path / 'extract_file.py',
+                              'boost.tar.gz', 
+                              meson.current_source_dir(), check: true)
 else
   message('Boost sources found.')
 endif
