Started work on assembeling and solving the operator on the boundary surface only.

--- a/SU2_CFD/src/meson.build
+++ b/SU2_CFD/src/meson.build
@@ -86,6 +86,7 @@ su2_cfd_src += files(['variables/CIncNSVariable.cpp',
                      'variables/CMeshVariable.cpp',
                      'variables/CMeshBoundVariable.cpp',
                      'variables/CMeshElement.cpp',
+                     'variables/CSobolevSmoothingVariable.cpp',
                      'variables/CTurbSSTVariable.cpp',
                      'variables/CVariable.cpp',
                      'variables/CNSVariable.cpp',
